--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
     <!-- nav -->
     <!-- heading  -->
 
-    <!-- <div class="add-area">
+    <div class="add-area">
 
-        <div class="left-text">
+        <!-- <div class="left-text">
             <span>
                 Eternity Starts Here: Your Perfect Match Awaits
             </span>
-        </div>
+        </div> -->
 
-    </div> -->
+    </div>
 
 </body>
 
