--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 
     <div class="add-area">
 
-        <div class="left-text">
+        <!-- <div class="left-text">
             <span>
                 Eternity Starts Here: Your Perfect Match Awaits
             </span>
-        </div>
+        </div> -->
 
     </div>
 
